@@ -94,6 +94,7 @@ the tests succeed.
   <li>os/2 (for OS/2)</li>
   <li>win9x for Microsoft Windows 95 and 98</li>
   <li>z/os for z/OS and OS/390</li>
+  <li>os/400 for OS/400</li>
 </ul>
 
 <h4>equals</h4>
